// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > PRICE (deve ficar inelegível — nenhum dos 3 bancos genéricos oferece PRICE) 1`] = `
{
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Não oferece financiamento na modalidade PRICE",
  "parcelas": 420,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0,
  "tipoAmortizacao": "PRICE",
  "totalJuros": 0,
  "totalPago": 350000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > SAC, LTV acima do limite (deve ficar inelegível) 1`] = `
{
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Financiamento (R$ 450.000) excede 80% do imóvel",
  "parcelas": 420,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 450000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 450000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > SAC, cliente com 80 anos (deve ficar inelegível — corte duro de idade) 1`] = `
{
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Idade máxima de 80 anos atingida",
  "parcelas": 12,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 350000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > SAC, cliente jovem (25 anos) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": true,
  "maxFinanciavel30": 371780,
  "parcelas": 420,
  "primeiraParcela": 4238.310860437399,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0.009488792934583046,
  "tipoAmortizacao": "SAC",
  "totalJuros": 699086.819455411,
  "totalPago": 1073692.694455411,
  "totalSeguros": 24605.875000000044,
  "ultimaParcela": 874.5114941121606,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > SAC, cliente próximo do limite de idade (78 anos) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": true,
  "maxFinanciavel30": 82787,
  "parcelas": 24,
  "primeiraParcela": 18917.560860437403,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0.009488792934583046,
  "tipoAmortizacao": "SAC",
  "totalJuros": 41513.469088800826,
  "totalPago": 404559.0690888008,
  "totalSeguros": 13045.600000000006,
  "ultimaParcela": 14795.69489696267,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > SAC, correntista, imóvel novo 1`] = `
{
  "avisoRenda": false,
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": true,
  "maxFinanciavel30": 369321,
  "parcelas": 420,
  "primeiraParcela": 4266.310860437399,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0.009488792934583046,
  "tipoAmortizacao": "SAC",
  "totalJuros": 699086.819455411,
  "totalPago": 1079586.6944554115,
  "totalSeguros": 30499.875000000353,
  "ultimaParcela": 874.5781607788273,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > SAC, entrada igual ao valor do imóvel (financiado <= 0, inelegível) 1`] = `
{
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Valor de entrada maior ou igual ao valor do imóvel",
  "parcelas": 420,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 0,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 0,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > SAC, entrada mínima (LTV no limite de 80%) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": true,
  "maxFinanciavel30": 369321,
  "parcelas": 420,
  "primeiraParcela": 4871.04812621417,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0.009488792934583046,
  "tipoAmortizacao": "SAC",
  "totalJuros": 798956.3650918916,
  "totalPago": 1231824.3650918917,
  "totalSeguros": 32868.00000000013,
  "ultimaParcela": 994.78218374724,
  "valorFinanciado": 400000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > SAC, imóvel usado 1`] = `
{
  "avisoRenda": false,
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": true,
  "maxFinanciavel30": 369321,
  "parcelas": 420,
  "primeiraParcela": 4266.310860437399,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0.009488792934583046,
  "tipoAmortizacao": "SAC",
  "totalJuros": 699086.819455411,
  "totalPago": 1079586.6944554115,
  "totalSeguros": 30499.875000000353,
  "ultimaParcela": 874.5781607788273,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > SAC, não correntista, imóvel novo, cenário padrão 1`] = `
{
  "avisoRenda": false,
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": true,
  "maxFinanciavel30": 369321,
  "parcelas": 420,
  "primeiraParcela": 4266.310860437399,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0.009488792934583046,
  "tipoAmortizacao": "SAC",
  "totalJuros": 699086.819455411,
  "totalPago": 1079586.6944554115,
  "totalSeguros": 30499.875000000353,
  "ultimaParcela": 874.5781607788273,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > com override apenas de mipRate (deve usar taxa flat, ignorando tabela por idade) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": true,
  "maxFinanciavel30": 361110,
  "parcelas": 420,
  "primeiraParcela": 4362.560860437399,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0.009488792934583046,
  "tipoAmortizacao": "SAC",
  "totalJuros": 699086.819455411,
  "totalPago": 1099847.3194554115,
  "totalSeguros": 50760.50000000046,
  "ultimaParcela": 874.8073274454941,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > com overrides do banco de dados (taxa, LTV, prazo, MIP e DFI customizados) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": true,
  "maxFinanciavel30": 369458,
  "parcelas": 360,
  "primeiraParcela": 4266.586175138835,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.115,
  "taxaMensal": 0.009112468436904608,
  "tipoAmortizacao": "SAC",
  "totalJuros": 575680.1935014429,
  "totalPago": 950915.1935014428,
  "totalSeguros": 25234.999999999873,
  "ultimaParcela": 1016.2760109803091,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > renda baixa (aviso de comprometimento de renda) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": true,
  "maxFinanciavel30": 71671,
  "parcelas": 420,
  "primeiraParcela": 4266.310860437399,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0.009488792934583046,
  "tipoAmortizacao": "SAC",
  "totalJuros": 699086.819455411,
  "totalPago": 1079586.6944554115,
  "totalSeguros": 30499.875000000353,
  "ultimaParcela": 874.5781607788273,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > valor de imóvel acima do teto do BB (R$ 6.000.000 — só relevante para BB, mas roda em todos) 1`] = `
{
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Imóvel acima do teto Banco do Brasil: R$ 5.000.000",
  "parcelas": 420,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 4200000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 4200000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bb > valor de imóvel alto (R$ 4.500.000 — testa teto do BB) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "bb",
  "bancoNome": "Banco do Brasil",
  "corBanco": "#FDCA00",
  "elegivel": true,
  "maxFinanciavel30": 347394,
  "parcelas": 420,
  "primeiraParcela": 38396.79774393659,
  "programa": "SBPE",
  "resultadoId": "bb",
  "taxaAnual": 0.12,
  "taxaMensal": 0.009488792934583046,
  "tipoAmortizacao": "SAC",
  "totalJuros": 6291781.375098655,
  "totalPago": 9716280.250098655,
  "totalSeguros": 274498.8750000009,
  "ultimaParcela": 7871.203447009373,
  "valorFinanciado": 3150000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > PRICE (deve ficar inelegível — nenhum dos 3 bancos genéricos oferece PRICE) 1`] = `
{
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Não oferece financiamento na modalidade PRICE",
  "parcelas": 420,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0,
  "tipoAmortizacao": "PRICE",
  "totalJuros": 0,
  "totalPago": 350000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > SAC, LTV acima do limite (deve ficar inelegível) 1`] = `
{
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Financiamento (R$ 450.000) excede 80% do imóvel",
  "parcelas": 420,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 450000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 450000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > SAC, cliente com 80 anos (deve ficar inelegível — corte duro de idade) 1`] = `
{
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Idade máxima de 80 anos atingida",
  "parcelas": 12,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 350000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > SAC, cliente jovem (25 anos) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": true,
  "maxFinanciavel30": 374120,
  "parcelas": 420,
  "primeiraParcela": 4212.011325593789,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458445,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673708298,
  "totalPago": 1068156.6423708298,
  "totalSeguros": 24605.875000000044,
  "ultimaParcela": 874.4488761720567,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > SAC, cliente próximo do limite de idade (78 anos) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": true,
  "maxFinanciavel30": 82903,
  "parcelas": 24,
  "primeiraParcela": 18891.26132559379,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458445,
  "tipoAmortizacao": "SAC",
  "totalJuros": 41184.72490325571,
  "totalPago": 404230.3249032557,
  "totalSeguros": 13045.600000000006,
  "ultimaParcela": 14794.599083010853,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > SAC, correntista, imóvel novo 1`] = `
{
  "avisoRenda": false,
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4240.011325593789,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458445,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673708298,
  "totalPago": 1074050.6423708303,
  "totalSeguros": 30499.875000000353,
  "ultimaParcela": 874.5155428387234,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > SAC, entrada igual ao valor do imóvel (financiado <= 0, inelegível) 1`] = `
{
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Valor de entrada maior ou igual ao valor do imóvel",
  "parcelas": 420,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 0,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 0,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > SAC, entrada mínima (LTV no limite de 80%) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4840.99151496433,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458445,
  "tipoAmortizacao": "SAC",
  "totalJuros": 792629.4484238054,
  "totalPago": 1225497.4484238056,
  "totalSeguros": 32868.00000000013,
  "ultimaParcela": 994.7106203871211,
  "valorFinanciado": 400000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > SAC, imóvel usado 1`] = `
{
  "avisoRenda": false,
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4240.011325593789,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458445,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673708298,
  "totalPago": 1074050.6423708303,
  "totalSeguros": 30499.875000000353,
  "ultimaParcela": 874.5155428387234,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > SAC, não correntista, imóvel novo, cenário padrão 1`] = `
{
  "avisoRenda": false,
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4240.011325593789,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458445,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673708298,
  "totalPago": 1074050.6423708303,
  "totalSeguros": 30499.875000000353,
  "ultimaParcela": 874.5155428387234,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > com override apenas de mipRate (deve usar taxa flat, ignorando tabela por idade) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": true,
  "maxFinanciavel30": 363317,
  "parcelas": 420,
  "primeiraParcela": 4336.261325593789,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458445,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673708298,
  "totalPago": 1094311.2673708303,
  "totalSeguros": 50760.50000000046,
  "ultimaParcela": 874.7447095053902,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > com overrides do banco de dados (taxa, LTV, prazo, MIP e DFI customizados) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": true,
  "maxFinanciavel30": 369458,
  "parcelas": 360,
  "primeiraParcela": 4266.586175138835,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.115,
  "taxaMensal": 0.009112468436904608,
  "tipoAmortizacao": "SAC",
  "totalJuros": 575680.1935014429,
  "totalPago": 950915.1935014428,
  "totalSeguros": 25234.999999999873,
  "ultimaParcela": 1016.2760109803091,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > renda baixa (aviso de comprometimento de renda) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": true,
  "maxFinanciavel30": 72119,
  "parcelas": 420,
  "primeiraParcela": 4240.011325593789,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458445,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673708298,
  "totalPago": 1074050.6423708303,
  "totalSeguros": 30499.875000000353,
  "ultimaParcela": 874.5155428387234,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > valor de imóvel acima do teto do BB (R$ 6.000.000 — só relevante para BB, mas roda em todos) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": true,
  "maxFinanciavel30": 341292,
  "parcelas": 420,
  "primeiraParcela": 50880.13590712547,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458445,
  "tipoAmortizacao": "SAC",
  "totalJuros": 8322609.208449912,
  "totalPago": 12888607.708449908,
  "totalSeguros": 365998.4999999966,
  "ultimaParcela": 10494.186514064584,
  "valorFinanciado": 4200000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > bradesco > valor de imóvel alto (R$ 4.500.000 — testa teto do BB) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "bradesco",
  "bancoNome": "Bradesco",
  "corBanco": "#CC092F",
  "elegivel": true,
  "maxFinanciavel30": 349566,
  "parcelas": 420,
  "primeiraParcela": 38160.101930344106,
  "programa": "SBPE",
  "resultadoId": "bradesco",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458445,
  "tipoAmortizacao": "SAC",
  "totalJuros": 6241956.906337434,
  "totalPago": 9666455.781337434,
  "totalSeguros": 274498.8750000009,
  "ultimaParcela": 7870.6398855484385,
  "valorFinanciado": 3150000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > PRICE (deve ficar inelegível — nenhum dos 3 bancos genéricos oferece PRICE) 1`] = `
{
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Não oferece financiamento na modalidade PRICE",
  "parcelas": 420,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0,
  "tipoAmortizacao": "PRICE",
  "totalJuros": 0,
  "totalPago": 350000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > SAC, LTV acima do limite (deve ficar inelegível) 1`] = `
{
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Financiamento (R$ 450.000) excede 80% do imóvel",
  "parcelas": 420,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 450000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 450000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > SAC, cliente com 80 anos (deve ficar inelegível — corte duro de idade) 1`] = `
{
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Idade máxima de 80 anos atingida",
  "parcelas": 12,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 350000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > SAC, cliente jovem (25 anos) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": true,
  "maxFinanciavel30": 379137,
  "parcelas": 420,
  "primeiraParcela": 4156.712103339809,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0.009255653628589933,
  "tipoAmortizacao": "SAC",
  "totalJuros": 681910.2810863665,
  "totalPago": 1056516.1560863666,
  "totalSeguros": 24605.875000000044,
  "ultimaParcela": 874.3172113571661,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > SAC, cliente próximo do limite de idade (78 anos) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": true,
  "maxFinanciavel30": 83147,
  "parcelas": 24,
  "primeiraParcela": 18835.96210333981,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0.009255653628589933,
  "tipoAmortizacao": "SAC",
  "totalJuros": 40493.48462508097,
  "totalPago": 403539.0846250809,
  "totalSeguros": 13045.600000000006,
  "ultimaParcela": 14792.294948750272,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > SAC, correntista, imóvel novo 1`] = `
{
  "avisoRenda": false,
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": true,
  "maxFinanciavel30": 376580,
  "parcelas": 420,
  "primeiraParcela": 4184.712103339809,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0.009255653628589933,
  "tipoAmortizacao": "SAC",
  "totalJuros": 681910.2810863665,
  "totalPago": 1062410.1560863669,
  "totalSeguros": 30499.875000000353,
  "ultimaParcela": 874.3838780238328,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > SAC, entrada igual ao valor do imóvel (financiado <= 0, inelegível) 1`] = `
{
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Valor de entrada maior ou igual ao valor do imóvel",
  "parcelas": 420,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 0,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 0,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > SAC, entrada mínima (LTV no limite de 80%) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": true,
  "maxFinanciavel30": 376580,
  "parcelas": 420,
  "primeiraParcela": 4777.792403816925,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0.009255653628589933,
  "tipoAmortizacao": "SAC",
  "totalJuros": 779326.0355272767,
  "totalPago": 1212194.035527277,
  "totalSeguros": 32868.00000000013,
  "ultimaParcela": 994.5601463129605,
  "valorFinanciado": 400000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > SAC, imóvel usado 1`] = `
{
  "avisoRenda": false,
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": true,
  "maxFinanciavel30": 376580,
  "parcelas": 420,
  "primeiraParcela": 4184.712103339809,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0.009255653628589933,
  "tipoAmortizacao": "SAC",
  "totalJuros": 681910.2810863665,
  "totalPago": 1062410.1560863669,
  "totalSeguros": 30499.875000000353,
  "ultimaParcela": 874.3838780238328,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > SAC, não correntista, imóvel novo, cenário padrão 1`] = `
{
  "avisoRenda": false,
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": true,
  "maxFinanciavel30": 376580,
  "parcelas": 420,
  "primeiraParcela": 4184.712103339809,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0.009255653628589933,
  "tipoAmortizacao": "SAC",
  "totalJuros": 681910.2810863665,
  "totalPago": 1062410.1560863669,
  "totalSeguros": 30499.875000000353,
  "ultimaParcela": 874.3838780238328,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > com override apenas de mipRate (deve usar taxa flat, ignorando tabela por idade) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": true,
  "maxFinanciavel30": 368047,
  "parcelas": 420,
  "primeiraParcela": 4280.962103339809,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0.009255653628589933,
  "tipoAmortizacao": "SAC",
  "totalJuros": 681910.2810863665,
  "totalPago": 1082670.7810863669,
  "totalSeguros": 50760.50000000046,
  "ultimaParcela": 874.6130446904997,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > com overrides do banco de dados (taxa, LTV, prazo, MIP e DFI customizados) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": true,
  "maxFinanciavel30": 369458,
  "parcelas": 360,
  "primeiraParcela": 4266.586175138835,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.115,
  "taxaMensal": 0.009112468436904608,
  "tipoAmortizacao": "SAC",
  "totalJuros": 575680.1935014429,
  "totalPago": 950915.1935014428,
  "totalSeguros": 25234.999999999873,
  "ultimaParcela": 1016.2760109803091,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > renda baixa (aviso de comprometimento de renda) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": true,
  "maxFinanciavel30": 73080,
  "parcelas": 420,
  "primeiraParcela": 4184.712103339809,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0.009255653628589933,
  "tipoAmortizacao": "SAC",
  "totalJuros": 681910.2810863665,
  "totalPago": 1062410.1560863669,
  "totalSeguros": 30499.875000000353,
  "ultimaParcela": 874.3838780238328,
  "valorFinanciado": 350000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > valor de imóvel acima do teto do BB (R$ 6.000.000 — só relevante para BB, mas roda em todos) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": true,
  "maxFinanciavel30": 345838,
  "parcelas": 420,
  "primeiraParcela": 50216.54524007772,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0.009255653628589933,
  "tipoAmortizacao": "SAC",
  "totalJuros": 8182923.3730363585,
  "totalPago": 12748921.873036355,
  "totalSeguros": 365998.4999999966,
  "ultimaParcela": 10492.606536285899,
  "valorFinanciado": 4200000,
}
`;

exports[`Bancos genéricos (Fase 1) — regressão antes/depois da migração > santander > valor de imóvel alto (R$ 4.500.000 — testa teto do BB) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "santander",
  "bancoNome": "Santander",
  "corBanco": "#EC0000",
  "elegivel": true,
  "maxFinanciavel30": 354222,
  "parcelas": 420,
  "primeiraParcela": 37662.408930058285,
  "programa": "SBPE",
  "resultadoId": "santander",
  "taxaAnual": 0.1169,
  "taxaMensal": 0.009255653628589933,
  "tipoAmortizacao": "SAC",
  "totalJuros": 6137192.529777269,
  "totalPago": 9561691.40477727,
  "totalSeguros": 274498.8750000009,
  "ultimaParcela": 7869.454902214425,
  "valorFinanciado": 3150000,
}
`;
